analytics client test
