# api-back/static/swagger.json
@@ -271,39 +271,65 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"PaginatedList_PoolDataPayload_": {
+			"ApiResponse_PoolDataPayload-Array_": {
 				"properties": {
-					"count": {
-						"type": "number",
-						"format": "double",
-						"description": "Count of all items satisfying 'paginatable' request."
-					},
-					"items": {
+					"data": {
 						"items": {
 							"$ref": "#/components/schemas/PoolDataPayload"
 						},
-						"type": "array",
-						"description": "Response items."
+						"type": "array"
 					},
-					"limit": {
-						"type": "number",
-						"format": "double",
-						"description": "Limit got from request"
+					"errorDetails": {
+						"type": "string",
+						"description": "Optional details for unexpected error responses."
 					},
-					"offset": {
-						"type": "number",
-						"format": "double",
-						"description": "Offset got from request"
+					"errorMessage": {
+						"type": "string",
+						"description": "Simple message to explain client developers the reason for error."
+					},
+					"status": {
+						"$ref": "#/components/schemas/ApiDefaultResponseStatusEnum",
+						"description": "Response status. OK for successful reponses."
+					},
+					"validationErrorDetails": {
+						"$ref": "#/components/schemas/ApiValidationErrorDetails"
 					}
 				},
+				"required": [
+					"status"
+				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"ApiResponse_PaginatedList_PoolDataPayload__": {
+			"HistogramPayload": {
 				"properties": {
-					"data": {
-						"$ref": "#/components/schemas/PaginatedList_PoolDataPayload_"
+					"secret": {
+						"type": "string",
+						"description": "Secret known only to analytics server"
 					},
+					"poolLabel": {
+						"type": "string",
+						"description": "Label of the pool which is used in DMCFE encryption"
+					},
+					"histogram": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array",
+						"description": "Calculated histogram, submitted by certified analytics server"
+					}
+				},
+				"required": [
+					"secret",
+					"poolLabel"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ApiResponse_any_": {
+				"properties": {
+					"data": {},
 					"errorDetails": {
 						"type": "string",
 						"description": "Optional details for unexpected error responses."
@@ -481,7 +507,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ApiResponse_PaginatedList_PoolDataPayload__"
+									"$ref": "#/components/schemas/ApiResponse_PoolDataPayload-Array_"
 								}
 							}
 						}
@@ -494,35 +520,67 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "sort",
+						"name": "status",
 						"required": false,
 						"schema": {
-							"type": "string",
-							"enum": [
-								"ASC",
-								"DESC"
-							]
-						}
-					},
-					{
-						"in": "query",
-						"name": "limit",
-						"required": false,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "offset",
-						"required": false,
-						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
+			}
+		},
+		"/ace/histogram": {
+			"post": {
+				"operationId": "PostHistogram",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_PoolDataPayload_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ACE"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/HistogramPayload"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/ace/reset": {
+			"post": {
+				"operationId": "Reset",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_any_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ACE"
+				],
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
